Fixed issue where the "Loading..." message wasn't showing correctly in the file browser. Fixed issue where the scrollbar was showing when the splitter was collapsed.

--- a/app/styles/less/file-browser.less
+++ b/app/styles/less/file-browser.less
@@ -172,6 +172,7 @@ div[role=browser] div[role=loading-indicator] {
   line-height: 18px;
   font-size: 13px;
   color: white;
+  flex: 0 0 100%;
 }
 
 div[role=browser] ul[role=file-list] > li.read-only {
